ASM9, still cannot execute gradle plugin